# joscaz-vector-db

./: .gitignore  CMakeLists.txt  README.md
cli/: vdb.c
include/vdb/: collection.h  storage.h  types.h
src/: collection.c  storage.c  types.c
tests/: test_collection.c  test_framework.h  test_main.c  test_types.c
